WIP (no working dropdown)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,11 @@
 !!! 5
 %html
   %head
-    -#%title #{title}
+    %meta{name: 'viewport',  content: 'width=device-width, initial-scale=1.0'}
     = stylesheet_link_tag "application"
     = javascript_include_tag "vendor/modernizr"
   %body
-    = render :partial => 'components/navbar'
+    %header
+      = render :partial => 'components/navbar'
     = yield
     = javascript_include_tag "application"
