--- a/app/views/components/_navbar.haml
+++ b/app/views/components/_navbar.haml
@@ -4,3 +4,15 @@
       %h1
         %a{href: '#'} Jargon
   %section.top-bar-section
+    %ul.right
+      - if user_signed_in?
+        %li.has_dropdown
+          %a{href: '#'} #{current_user.email}
+          %ul.dropdown
+            %li
+              %a{href:'#'} Edit Account
+            %li
+              = link_to "Log Out", destroy_user_session_path, method: :delete
+    %ul.left
+      %li
+        %a{href: '#'} Left
