--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,16 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  %div
-    = f.label :password
-    - if @validatable
-      %i
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+.small-6.small-offset-3.columns
+  %fieldset
+    %legend Sign up
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .row
+        = f.label :email
+        = f.email_field :email, autofocus: true
+      .row
+        = f.label :password
+        = f.password_field :password, autocomplete: "off"
+      .row
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: "off"
+      %div= f.submit "Sign up", class: 'button tiny'
+  = render "devise/shared/links"
