--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,32 +1,24 @@
 .small-6.small-offset-3.columns
   %fieldset
-    %legend Sign up
-    %p Edit #{resource_name.to_s.humanize}
+    %legend Edit User
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
-      %div
+      .row
         = f.label :email
-        %br/
         = f.email_field :email, autofocus: true
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-        %div
+        .row
           Currently waiting confirmation for: #{resource.unconfirmed_email}
-      %div
+      .row
         = f.label :password
-        %i (leave blank if you don't want to change it)
-        %br/
+        %small Leave blank if you don't want to change
         = f.password_field :password, autocomplete: "off"
-      %div
+      .row
         = f.label :password_confirmation
-        %br/
         = f.password_field :password_confirmation, autocomplete: "off"
-      %div
+      .row
         = f.label :current_password
-        %i (we need your current password to confirm your changes)
-        %br/
+        %small We need your current password to confirm your changes
         = f.password_field :current_password, autocomplete: "off"
-      %div= f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+      .row= f.submit "Update", class: 'button tiny'
+  = link_to "Back", :back
