--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -429,6 +429,7 @@ $include-html-global-classes: $include-html-classes;
 // We use this to control the display property.
 // $button-display: inline-block;
 // $button-margin-bottom: rem-calc(20);
+$button-margin-bottom: 0px;
 
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
