Standardize Devise buttons with Doorkeeper

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -6,4 +6,4 @@
       .row
         = f.label :email
         = f.email_field :email, autofocus: true
-      %div= f.submit "Send me reset password instructions", class: 'button tiny'
+      %div= f.submit "Send me reset password instructions", class: 'button tiny right'
