--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -20,5 +20,5 @@
         = f.label :current_password
         %small We need your current password to confirm your changes
         = f.password_field :current_password, autocomplete: "off"
-      .row= f.submit "Update", class: 'button tiny'
+      .row= f.submit "Update", class: 'button tiny right'
   = link_to "Back", :back
