--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,5 +12,5 @@
       .row
         = f.label :password_confirmation
         = f.password_field :password_confirmation, autocomplete: "off"
-      %div= f.submit "Sign up", class: 'button tiny'
+      %div= f.submit "Sign up", class: 'button tiny right'
   = render "devise/shared/links"
