--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,9 +1,11 @@
-%h2 Resend confirmation instructions
-= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  %div= f.submit "Resend confirmation instructions"
-= render "devise/shared/links"
+.small-6.small-offset-3.columns
+  %fieldset
+    %legend Resend Confirmation Instructions
+    = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+      = devise_error_messages!
+      .row
+        = f.label :email
+        = f.email_field :email, autofocus: true
+      .row
+        = f.submit "Resend confirmation instructions", class: 'button tiny right'
+    = render "devise/shared/links"
