--- a/app/views/components/_navbar.haml
+++ b/app/views/components/_navbar.haml
@@ -21,3 +21,6 @@
           = link_to "Sign In", new_user_session_path
         %li
           = link_to "Register", new_user_registration_path
+    %ul.left
+      %li
+        = link_to "Localizations", localizations_path
