UUID and right-algiend buttons like god intended

--- a/app/views/localizations/show.html.haml
+++ b/app/views/localizations/show.html.haml
@@ -6,7 +6,7 @@
       %p #{@localization.name}
 
       %h4 UUID:
-      %code N/A
+      %code #{@localization.uuid}
 
       %h4 Owner:
       %p #{@localization.owner.email}
