--- a/app/views/localizations/new.html.haml
+++ b/app/views/localizations/new.html.haml
@@ -7,4 +7,4 @@
         = f.label :name
         = f.text_field :name
       .row
-        = f.submit 'Submit', class: 'button tiny success'
+        = f.submit 'Submit', class: 'button tiny success right'
