--- a/app/views/localizations/show.html.haml
+++ b/app/views/localizations/show.html.haml
@@ -17,6 +17,14 @@
       %h4 Updated:
       %p #{@localization.updated_at}
 
+      %h4 Locales:
+      %ul.locales
+        - @localization.locales.each do |locale|
+          %li
+            = link_to "#{locale.locale}", localization_locale_path(@localization, locale)
+        %li
+          = link_to "New Locale", new_localization_locale_path(@localization)
+
     .small-4.columns
       %h4 Actions
       %ul.button-group
