--- a/app/views/components/_navbar.haml
+++ b/app/views/components/_navbar.haml
@@ -24,3 +24,5 @@
     %ul.left
       %li
         = link_to "Localizations", localizations_path
+      %li
+        = link_to "Applications", oauth_applications_path
