--- a/app/views/localizations/show.html.haml
+++ b/app/views/localizations/show.html.haml
@@ -21,7 +21,7 @@
       %ul.locales
         - @localization.locales.each do |locale|
           %li
-            = link_to "#{locale.locale}", localization_locale_path(@localization, locale)
+            = link_to "#{locale.name}", localization_locale_path(@localization, locale)
         %li
           = link_to "New Locale", new_localization_locale_path(@localization)
 
