--- a/app/views/locales/_locale_form.html.haml
+++ b/app/views/locales/_locale_form.html.haml
@@ -1,7 +1,7 @@
 = form_for [@localization, @locale] do |f|
   .row
-    = f.label :locale
-    = f.text_field :locale
+    = f.label :name
+    = f.text_field :name
   .row
     = f.label :yaml
     = f.text_area :yaml
