--- a/app/views/locales/new.html.haml
+++ b/app/views/locales/new.html.haml
@@ -2,4 +2,4 @@
   %fieldset
     %legend #{@locale.name} locale for #{@localization.name}
 
-    = render 'locale_form', locals: { locale: @locale, localization: @localiztion }
+    = render 'locale_form', locals: { locale: @locale, localization: @localization }
