--- a/app/views/components/_navbar.haml
+++ b/app/views/components/_navbar.haml
@@ -2,10 +2,10 @@
   %ul.title-area
     %li.name
       %h1
-        %a{href: '/'} Jargon
+        %a{href: '/'} #{t('.title')}
     %li.toggle-topbar.menu-icon
       %a{href: true}
-        %span Menu
+        %span #{t('.menu')}
   %section.top-bar-section
     %ul.right
       - if user_signed_in?
@@ -13,16 +13,16 @@
           %a{href: '#'} #{current_user.email}
           %ul.dropdown
             %li
-              = link_to "Edit Account", edit_user_registration_path
+              = link_to t('.edit_account'), edit_user_registration_path
             %li
-              = link_to "Log Out", destroy_user_session_path, method: :delete
+              = link_to t('.log_out'), destroy_user_session_path, method: :delete
       - else
         %li
-          = link_to "Sign In", new_user_session_path
+          = link_to t('.sign_in'), new_user_session_path
         %li
-          = link_to "Register", new_user_registration_path
+          = link_to t('.register'), new_user_registration_path
     %ul.left
       %li
-        = link_to "Localizations", localizations_path
+        = link_to t('.localizations'), localizations_path
       %li
-        = link_to "Applications", oauth_applications_path
+        = link_to t('.applications'), oauth_applications_path
