--- a/app/views/locales/_delete_form.html.haml
+++ b/app/views/locales/_delete_form.html.haml
@@ -1,4 +1,4 @@
 - submit_btn_css ||= 'button tiny alert full'
 = form_tag [localization, locale] do
   %input{:name => "_method", :type => "hidden", :value => "delete"}/
-  = submit_tag 'Destroy', onclick: "return confirm('Are you sure?')", class: submit_btn_css, style: 'transform: translateY(-100%);'
+  = submit_tag t('.destroy'), onclick: "return confirm(#{t('.confirm')})", class: submit_btn_css, style: 'transform: translateY(-100%);'
