--- a/app/views/localizations/edit.html.haml
+++ b/app/views/localizations/edit.html.haml
@@ -1,10 +1,10 @@
 .small-6.small-offset-3.columns
   %fieldset
-    %legend Editing #{@localization.name}
+    %legend #{t('.editing')} #{@localization.name}
 
     = form_for @localization, html: {role: 'form'} do |f|
       .row
         = f.label :name
         = f.text_field :name
       .row
-        = f.submit 'Submit', class: 'button tiny success right'
+        = f.submit t('.submit'), class: 'button tiny success right'
