--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
   %body
     %header
       = render :partial => 'components/navbar'
+      = render :partial => 'components/flash'
     = yield
     = javascript_include_tag "application"
     :javascript
