--- a/_includes/api_nav.html
+++ b/_includes/api_nav.html
@@ -1,7 +1,7 @@
 {% assign api_cats = "api localizations locales uuid" | split: ' ' %}
 <h1>{{ site.title }}</h1>
 <ul id='links'>
-  <li><a href="/index.html">Front Page</a></li>
+  <li><a href="#{{ site.baseurl }}index.html">Front Page</a></li>
   {% for post in site.posts %}
     {% if post.category == null %}
     <li><a href='#{{ post.url }}'>{{ post.title }}</a></li>
